Fix nav dropdown z-index

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -60,7 +60,7 @@
         left:0;
         width: 17rem;
         display: none;
-        //z-index: 99;
+        z-index: 99;
 
         &:hover {
             display: block;
